--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
-    <title>gitCard - Cartão de Visitas criado com Git</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="gitcard.css">
-    <script src="app.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>GitCard - Cartão de Visitas criado com Git</title>
+    
+    <script src="app.js"></script>
 </head>
 
 <body class="ready">
@@ -17,9 +18,9 @@
 
     <div class="github-card user-card">
         <div class="header User"></div>
-        <a class="avatar" href="" target="_top"><img src="https://avatars2.githubusercontent.com/u/5969090?v=4&amp;s=80" alt="José Olinda"></a>
+        <a class="avatar" href="" target="_top"><img src="https://avatars.githubusercontent.com/u/60759024?v=4" alt=""></a>
         <div class="content">
-            <h1>José Olinda</h1>
+            <h1>Vinicius</h1>
             <ul class="status">
                 <li><a href="https://github.com/joseolinda?tab=repositories" target="_top"><strong>40</strong>Repositórios</a></li>
                 <li><a href="https://gist.github.com/joseolinda" target="_top"><strong>2</strong>Gists</a></li>
