--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div class="github-card user-card">
         <div class="header User"></div>
-        <a class="avatar" href="" target="_top"><img src="https://avatars.githubusercontent.com/u/60759024?v=4" alt=""></a>
+        <a class="avatar" id="avatar" target="_top"><img src="" alt=""></a>
         <div class="content">
             <h1>Vinicius</h1>
             <ul class="status">
-                <li><a href="https://github.com/joseolinda?tab=repositories" target="_top"><strong>40</strong>Repositórios</a></li>
-                <li><a href="https://gist.github.com/joseolinda" target="_top"><strong>2</strong>Gists</a></li>
-                <li><a href="https://github.com/joseolinda/followers" target="_top"><strong>21</strong>Seguidores</a></li>
+                <li><a href="" target="_top"><strong>?</strong>Repositórios</a></li>
+                <li><a href="" target="_top"><strong>??</strong>Gists</a></li>
+                <li><a href="" target="_top"><strong>???</strong>Seguidores</a></li>
             </ul>
         </div>
     </div>
